[package]
name = "github-analytics"
version.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
chrono = "0.4.23"
eyre = "0.6.8"
influxdb = { version = "0.5.2", features = ["derive"] }
reqwest = { version = "0.11.4", features = ["json"] }
serde_json = "1.0.91"
tokio = { version = "1.24.1", features = ["full"] }
