[package]
name = "github-analytics"
version.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
chrono = "0.4.23"
clap = { version = "4.0.32", features = ["derive"] }
eyre = "0.6.8"
influxdb = { version = "0.5.2", features = ["derive"] }
reqwest = { version = "0.11.4", features = ["json"] }
serde_json = "1.0.91"
text-tables = "0.3.1"
tokio = { version = "1.24.1", features = ["full"] }
